--- a/style.css
+++ b/style.css
@@ -1,14 +1,27 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
+}
+
+canvas {
+  background-color: green;
+  height: 100%;
+  width: 100%;
+}
+
+#zoomfield {
   height: 99vh;
-  width: 99vw;
-  margin: 0;
-  overflow: hidden;
-  padding: 5px;
+  width: 100vw;
+  border: 0px solid black;
+  margin: 0px;
+  background-color: black;
+  display: flex;
 }
 
 div {
-  border: 0px solid black;
   width: 100%;
   height: 100%;
-  margin: 0px;
 }
