--- a/style.css
+++ b/style.css
@@ -8,22 +8,26 @@ body {
   height: 100vh;
 }
 
-canvas {
-  background-color: green;
-  height: 50%;
-  width: 100%;
-}
-
 #zoomfield {
   height: 100%;
   width: 100%;
-  border: 0px solid black;
-  margin: 0px;
-  background-color: black;
+  background-color: white !important;
   display: flex;
+}
+
+*:last-child {
 }
 
 div {
   width: 100%;
   height: 100%;
+  display: flex;
+  border: 1px solid black;
+}
+
+.otherDiv {
+  flex-shrink: 1.618033;
+}
+
+.div2 {
 }
