--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   width: 100%;
   background-color: white !important;
   display: flex;
+  background-color: rgb(99, 99, 99) !important;
 }
 
 *:last-child {
