--- a/style.css
+++ b/style.css
@@ -1,25 +1,42 @@
+:root {
+  --main-color-dark: "grey";
+}
+
+* {
+  box-sizing: border-box;
+}
+
 html {
-  height: 100%;
-  width: 100%;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#allDiv {
+  display: flex;
+  flex-direction: column;
+}
+
+#interface {
+  max-height: fit-content;
 }
 
 #contentDiv {
-  height: 100%;
-  width: 100%;
+  margin: 0;
+  max-height: 100%;
+  max-width: 100%;
   display: flex;
 }
 
-*:last-child {
-}
-
 div {
-  width: 100%;
   height: 100%;
+  width: 100%;
   display: flex;
   border: 1px solid black;
 }
@@ -28,5 +45,10 @@ div {
   flex-shrink: 1.618033;
 }
 
-.div2 {
+#resetBtn,
+#deviationInput {
+  margin: 0.5rem;
+  font-size: 1.3rem;
+  border: 2px solid black;
+  max-height: fit-content;
 }
