--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
+  --main-color: black;
   --main-color-dark: "grey";
   --main-color-light: "white";
+  --div-border: 1px;
 }
 
 * {
@@ -17,6 +19,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  background-color: var(--main-color);
 }
 
 #allDiv {
@@ -30,17 +33,17 @@ body {
 }
 
 #contentDiv {
-  margin: 0;
   max-height: 100%;
   max-width: 100%;
   display: flex;
+  filter: blur(0px);
 }
 
 div {
   height: 100%;
   width: 100%;
   display: flex;
-  border: 1px solid black;
+  border: var(--div-border) solid black;
 }
 
 .otherDiv {
